--- a/index.html
+++ b/index.html
@@ -1,18 +1,51 @@
 <!DOCTYPE html>
 <html lang="zh">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lambda Smart</title>
-    <style type="text/css">
-      * {
-        padding: 0;
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Welcome to Lambda Smart Website.</title>
+    <style>
+      html, body {
         margin: 0;
+        padding: 0;
       }
-    </style>
-</head>
-<body>
-    Welcome to Lambda Smart Website.
-</body>
+      /* Compatible with IE */
+      html {
+        scrollbar-face-color: dodgerblue;
+        scrollbar-highlight-color: #000;
+        scrollbar-3dlight-color: #000;
+        scrollbar-darkshadow-color: #000;
+        scrollbar-Shadow-color: #adadad;
+        scrollbar-arrow-color: rgba(0, 0, 0, 0.4);
+        scrollbar-track-color: #eeeeee;
+      }
+
+      ::-webkit-scrollbar {
+        width: 5px;
+        height: 110px;
+        background-color: #F5F5F5;
+      }
+
+      ::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        border-radius: 10px;
+        background-color: #F5F5F5;
+      }
+
+      ::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        background-color: dodgerblue;
+      }
+
+      ::-webkit-scrollbar-thumb:hover {
+        border-radius: 5px;
+        -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+        background: rgba(0, 0, 0, 0.4);
+      }
+  </style>
+  </head>
+  <body>
+    <span>Preview</span>
+  </body>
 </html>
